--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             display: flex;
             align-items: center;
             position: relative;
-            background-image: url('weather.jpg');
+            background-image: url('image.jpg');
             background-repeat: no-repeat;
         }
         #cover-caption {
