--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="cover-caption">
             <div class="container">
                 <div class="page-header" style='color: white'>
-                    <h1 class="py-2 text-truncate">Welcome to Weather App 🌈</h1>
+                    <h1 class="py-2 text-truncate">Welcome to Web Series 🎥</h1>
                 </div>
                 <div class="row text-white">
                     <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
