--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             display: flex;
             align-items: center;
             position: relative;
-            background-image: url('image.jpg');
+            background-image: url('movie.jpg');
             background-repeat: no-repeat;
         }
         #cover-caption {
@@ -47,16 +47,16 @@
         <div id="cover-caption">
             <div class="container">
                 <div class="page-header" style='color: white'>
-                    <h1 class="py-2 text-truncate">Welcome to Web Series 🎥</h1>
+                    <h1 class="display-4">Welcome to Web Series 🎥</h1>
                 </div>
                 <div class="row text-white">
                     <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
                         <div class="px-2">
-                                <button type="submit" class="btn btn-warning" name="login">Login</button>
+                                <button type="submit" class="btn btn-warning font-weight-bold" name="login">Login</button>
                         </div>
                         <br>
                         <div class="px-2">
-                            <button type="submit" class="btn btn-warning" name="register">Register</button>
+                            <button type="submit" class="btn btn-warning font-weight-bold" name="register">Register</button>
                         </div>
                     </div>
                 </div>
